--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -1,5 +1,5 @@
-@import "./reset.scss";
-@import "./site.scss";
 @import "./utils/utils.scss";
+@import "./site.scss";
 @import "./layout.scss";
 @import "./menu.scss";
+@import "./text.scss";
