--- a/src/assets/style/text.scss
+++ b/src/assets/style/text.scss
@@ -113,6 +113,14 @@
       color: transparent;
     }
   }
+  &.text-linear {
+    background: linear-gradient(45deg, #009688, yellowgreen, pink, #03a9f4, #9c27b0, #8bc34a);
+    background-clip: text;
+    color: transparent;
+    &.huerotate {
+      animation: huetorate 5s infinite;
+    }
+  }
 }
 
 .text-fadeIn {
@@ -130,26 +138,46 @@
   }
 
   &.simple {
-    background: 
-      linear-gradient(90deg, #ff5722, #ff5722),
-      linear-gradient(90deg, #aaa, #aaa);
-    background-size: 100% 100%, 0 100px;
-    background-repeat: no-repeat;
-    background-position: 100% 100%, 0 100%;
-    color: transparent;
-    -webkit-background-clip: text;
-    line-height: 3;
-    opacity: 0;
-    &:hover {
+    position: relative;
+    .button {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 120px;
+      height: 64px;
+      line-height: 64px;
+      text-align: center;
+      border: 1px solid #eee;
+      cursor: pointer;
+      transition: .3s all;
+      z-index: 1;
+      &:hover {
+          background: #eee;
+      }
+    }
+
+    .text {
+      background: 
+        linear-gradient(90deg, #ff5722, #ff5722),
+        linear-gradient(90deg, #aaa, #aaa);
+      background-size: 100% 100%, 0 100px;
+      background-repeat: no-repeat;
+      background-position: 100% 100%, 0 100%;
+      color: transparent;
+      -webkit-background-clip: text;
+      line-height: 3;
+      opacity: 0;
+    }
+    .button:hover ~ .text {
       transition: 1.2s background .3s ease-out, .8s line-height ease-out, .6s opacity ease-in;
       background-size: 0 100px, 100% 100%;
       color: transparent;
       line-height: 1;
       opacity: 1;
     }
-    &::before {
+    .text::before {
       content: "";
-      position: fixed;
+      position: absolute;
       background: rgba($color: #000, $alpha: .8);
       top: 0;
       left: 0;
@@ -159,12 +187,13 @@
       transition: .3s all linear;
       opacity: 0;
     }
-    &:hover::before {
+    .button:hover ~ .text::before {
       opacity: 1;
     }
   }
 
   &.complex {
+    position: relative;
     .button {
       top: 0;
       left: 0;
@@ -176,7 +205,7 @@
       cursor: pointer;
       transition: .3s all;
       z-index: 1;
-
+      position: absolute;
       &:hover {
           background: #eee;
       }
@@ -209,11 +238,6 @@
 
     p {
       position: relative;
-      margin: 50px auto;
-      width: 500px;
-      height: 250px;
-      font-size: 20px;
-      line-height: 1.5;
       overflow: hidden;
       z-index: 2;
       span {
@@ -255,7 +279,58 @@
   }
 }
 
+.neon {
+  color: #fff;
+  text-shadow: 
+    0 0 10px #0ebeff,
+    0 0 20px #0ebeff,
+    0 0 50px #0ebeff,
+    0 0 100px #0ebeff,
+    0 0 200px #0ebeff;
+}
+.neon-hover {
+  transition: all .3s;
+  color: #fff;
+  &:hover {
+    text-shadow: 
+      0 0 10px #0ebeff,
+      0 0 20px #0ebeff,
+      0 0 50px #0ebeff,
+      0 0 100px #0ebeff,
+      0 0 200px #0ebeff;
+  }
+}
 
+.text-flicker {
+  &:hover span {
+    animation: textFlicker 1s linear forwards;
+    @for $i from 1 to 10 {
+      &:nth-child(#{$i}) {
+        animation-delay: #{$i * 0.1 + 0.3}s;
+      }
+    }
+  }
+}
+
+.text-shine {
+  position: relative;
+  color: transparent;
+  background-color: #e8a95b;
+  background-clip: text;
+  &::after {
+    content: attr(data-content);
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(120deg, transparent 0%, transparent 6rem, white 11rem, transparent 11.15rem, transparent 15rem, rgba(255, 255, 255, 0.3) 20rem, transparent 25rem, transparent 27rem, rgba(255, 255, 255, 0.6) 32rem, white 33rem, rgba(255, 255, 255, 0.3) 33.15rem, transparent 38rem, transparent 40rem, rgba(255, 255, 255, 0.3) 45rem, transparent 50rem, transparent 100%);
+    background-clip: text;
+    background-size: 150% 100%;
+    background-repeat: no-repeat;
+    animation: textShine 5s infinite linear;
+  }
+}
 
 @keyframes scrollLeft {
   100% {
@@ -266,5 +341,39 @@
 @keyframes bgPosition {
   100% {
     background-position: center 100%;
+  }
+}
+
+@keyframes textFlicker {
+  0% {
+    color: #333;
+  }
+  5%, 15%, 25%, 30%, 100% {
+    color: #fff;
+    --color: #42fff6;
+    text-shadow: 
+      0px 0px 5px var(--color),
+      0px 0px 10px var(--color),
+      0px 0px 20px var(--color),
+      0px 0px 50px var(--color);
+  }
+  10%, 20% {
+    color: #333;
+    text-shadow: none;
+  }
+}
+
+@keyframes huetorate {
+  100% {
+    filter: hue-rotate(360deg);
+  }
+}
+
+@keyframes textShine {
+  0% {
+    background-position: 50% 0;
+  }
+  100% {
+    background-position: -190% 0;
   }
 }
