charging,loading,wave

--- a/src/assets/style/site.scss
+++ b/src/assets/style/site.scss
@@ -3,3 +3,27 @@ body,
 #app {
   height: 100%;
 }
+
+.flex {
+  display: flex;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
+.justify-content-between {
+  justify-content: space-between;
+}
+
+.justify-content-around {
+  justify-content: space-around;
+}
+
+.align-items-center {
+  align-items: center;
+}
