--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -5,3 +5,6 @@
 @import "./layout.scss";
 @import "./menu.scss";
 @import "./text.scss";
+@import "./loading.scss";
+@import "./charging.scss";
+@import "./wave.scss";
